# Husks

./: .gitignore  README.md  STAGING_SAFETY.md  layers.toml  locke.nanorc  pyproject.toml  three-machine-problem.sh
.github/workflows/: ci.yml
.husks-bootstrap-core-site/: CSE-v1.md  CSE-v2.md  bootstrap-core.husk
.husks-bootstrap-core-site/.traces/: build.manifest.json  generate-reader.history.jsonl  generate-reader.seal
.husks-bootstrap-core-site/readers/: generated_reader.py
.husks-claude-haiku-site/: answer.py  claude-haiku-hy-demo.husk  task.txt  test_answer.py
.husks-claude-haiku-site/.traces/: verify-answer.history.jsonl  verify-answer.seal  write-answer.history.jsonl  write-answer.seal  write-task.history.jsonl  write-task.seal  write-test.history.jsonl  write-test.seal
.husks-claude-vs-cheat-site/: claude-vs-cheat-trial-cse.husk  cse-mini-spec.txt  hidden-score-report.txt  mini_cse.py  test_public_mini_cse.py
.husks-claude-vs-cheat-site/.traces/: claude-vs-cheat-cse-reader.history.jsonl  claude-vs-cheat-cse-reader.reader-a-claude.history.jsonl  claude-vs-cheat-cse-reader.reader-b-cheat.history.jsonl  claude-vs-cheat-cse-reader.seal  verify-hidden-score.history.jsonl  verify-hidden-score.seal  write-cse-spec.history.jsonl  write-public-tests.history.jsonl  write-public-tests.seal
.husks-cse-reader-site/: claude-haiku-cse-reader-demo.husk  cse-mini-spec.txt  mini_cse.py  test-report.txt  test_mini_cse.py
.husks-cse-reader-site/.traces/: verify-mini-cse-reader.history.jsonl  verify-mini-cse-reader.seal  write-cse-spec.history.jsonl  write-cse-spec.seal  write-cse-tests.history.jsonl  write-cse-tests.seal  write-mini-cse-reader.history.jsonl  write-mini-cse-reader.seal
.husks-hidden-trial-site/: claude-haiku-hidden-trial-cse.husk  hidden-report.txt  mini_cse.py  test_public_mini_cse.py
.husks-hidden-trial-site/.traces/: hidden-trial-cse-reader.history.jsonl  hidden-trial-cse-reader.reader-a.history.jsonl  hidden-trial-cse-reader.reader-b.history.jsonl  hidden-trial-cse-reader.seal  verify-hidden-cases.history.jsonl  verify-hidden-cases.seal  write-cse-spec.history.jsonl  write-public-tests.history.jsonl  write-public-tests.seal
.husks-hostile-trial-site/: claude-haiku-hostile-trial-cse.husk  hidden-score-report.txt  mini_cse.py  test_public_mini_cse.py
.husks-hostile-trial-site/.traces/: hostile-trial-cse-reader.history.jsonl  hostile-trial-cse-reader.reader-a-honest.history.jsonl  hostile-trial-cse-reader.reader-b-hostile.history.jsonl  hostile-trial-cse-reader.seal  verify-hidden-score.history.jsonl  verify-hidden-score.seal  (+4 more)
.husks-trial-cse-site/: claude-haiku-trial-cse-demo.husk  cse-mini-spec.txt  mini_cse.py  test_mini_cse.py
docs/: BACKLOG.md  CLI_BETA_100.md  CLI_BETA_95.md  CONDITIONAL_SEMANTICS.md  EXPLORE.md  GITHUB_CI_PLAN.md  LIQUID_BETA_100_PLAN.md  README.md  ROADMAP.md  TESTS.md  Theory.md  Tutorial.md  architecture.md  cli.md  cli_proposed.md  convergence-audit.md  full_architecture.txt  gamma-claude-code-brief.md  gamma-design.md  husks-dag-rearchitecture.md  husks_beta_three_machine_plan.md  husks_beta_three_machine_plan_revised.md  husks_beta_three_machine_plan_revised_bloat_control.md  limitations.md  liquid-beta.md  locke.md  phase-0-complete.md  phase-1-complete.md  phase-2-complete.md  theory.md  three-machine-proof.md  tutorial.md  violations_graph.txt
examples/: hello.hy  husks-demo.plan.json
output/: three-machine-proof.stdout
plans/: bootstrap-core.json
scripts/: gate_level0.py  gen_adversarial.py  gen_demo.py
spec/: CSE-v1-errata.md  CSE-v2.md
spec/conformance_pkg/: pyproject.toml
spec/conformance_pkg/src/husks_conformance/: __init__.py  gate.py
src/: cli.py  engine.py  forms.py  locke.py  oracle.py  report.py  seal.py
tests/: TESTS.md  conftest.py  test_0_cse_codec.py  test_10_cli_exit_code.py  test_11_output_guard.py  test_12_fuel_batch.py  test_13_trial_fuel.py  test_14_recipe_identity.py  test_15_triage_regressions.py  test_1_golden_vector.py  test_2_json_bijection.py  test_3_flat_elaboration.py  test_4_layer_isolation.py  test_5_build_verify.py  test_6_oracle_guard.py  test_7_skill_pipeline.py  test_8_cross_language.py  test_9_input_order_invariance.py  test_LIQUID_68_beta_three_machine.py  test_LIQUID_70_three_machine_cli_acceptance.py  test_LIQUID_71_cli_rendering_contract.py  test_LIQUID_72_beta100.py  test_LIQUID_73_beta100_public_cli.py  test_SOLID_11_output_guard.py  test_SOLID_12_fuel_batch.py  test_SOLID_13_trial_fuel.py  test_SOLID_14_recipe_identity.py  test_SOLID_15_triage_regressions.py  test_SOLID_16_gate_a_site_inputs.py  test_SOLID_17_gate_a_husks_init.py  test_SOLID_24_gate_g_root_verification.py  test_SOLID_25_gate_h_shell_failure_isolation.py  test_SOLID_26_gate_g_wheel_smoke.py  test_SOLID_33_cache_layout.py  test_SOLID_38_cli_contract.py  test_SOLID_3_flat_elaboration.py  test_SOLID_43_public_beta_cli.py  test_SOLID_44_unknown_fields.py  test_SOLID_45_reader_command_parsing.py  test_SOLID_46_graph_validation.py  (+73 more)
(+252 files in other folders)
