[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "husks"
version = "0.1.0"
description = "A small build system for nondeterministic work."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["litellm"]
hy = ["hy>=1.0.0", "hyrule>=1.0.0"]

[project.scripts]
husks = "husks.cli:main"
husks-gate = "husks.gate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/husks"]

# Ship runtime data that lives outside the package tree, into the package.
# Editable installs don't materialize these; resources.py falls back to repo root.
[tool.hatch.build.targets.wheel.force-include]
"spec/conformance" = "husks/_resources/conformance"
"skills/husks" = "husks/_resources/skill"
"examples/templates" = "husks/_resources/templates"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "alpha: Old sequential engine regression tests (chronological build-up)",
    "beta: Three-machine beta proof tests (proof boundary)",
    "gate_a: Seed portability and site_inputs",
    "gate_b: Transaction safety and output validation",
    "gate_c: Artifact identity and comparison",
    "gate_d: Cache reuse and trust",
    "gate_e: Independent re-realization",
    "gate_f: Report and cost proof",
    "gate_g: Release smoke tests",
    "gate_h: Bloat-control regression",
    "slow: Wheel builds or subprocess-heavy tests",
]
