[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "husks"
version = "0.1.0"
description = "A small build system for nondeterministic work."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "tomli>=1.0.0; python_version < '3.11'",
    "litellm",
]

[project.optional-dependencies]
claude-code = ["claude-code-sdk"]

[project.scripts]
husks = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "slow: Wheel builds or subprocess-heavy tests",
]
