[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "husks-conformance"
version = "0.1.0"
requires-python = ">=3.10"
description = "CSE v1 conformance vectors for Husks implementations"

[tool.hatch.build.targets.wheel]
packages = ["src/husks_conformance"]

[tool.hatch.build.targets.wheel.force-include]
"../conformance" = "husks_conformance/_vectors"
